--- a/bower.json
+++ b/bower.json
@@ -9,8 +9,7 @@
     "angular-toastr": "~1.5.0",
     "animate.css": "~3.4.0",
     "angular": "~1.5.3",
-    "angular-indexedDB": "angular-indexed-db#^1.1.4",
-    "idb": "^1.1.0"
+    "angular-indexedDB": "angular-indexed-db#^1.1.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
